Применён .gitignore: удалены из индекса игнÐйлы